--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,3 +15,69 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.page {
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+.header, .footer {
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+  font-size: 2.4rem;
+}
+.header img {
+  height: 75px;
+}
+.main {
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.image {
+  width: 45%;
+  min-width: 500px;
+}
+.image h2 {
+  font-size: 3rem;
+  margin-bottom: 25px;
+}
+.image p {
+  font-size: 1.8rem;
+}
+.infoBox {
+  margin-top: 1.6rem;
+  padding-left: 20px;
+  width: 45%;
+  font-size: 1.8rem;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.date {
+  align-self: flex-end;
+}
+.dateSelector {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 50px; 
+}
+.dateSelector h3 {
+  font-size: 2rem;
+  margin-right: 1.6rem;
+}
+.footer {
+  font-size: 2rem;
+}
+
