--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.react-datepicker-wrapper input {
+  font-size: 1.6rem;
+}
