second try to increase calendar size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ code {
 
 /* Added custom styles to try to increase calendar size on mobile
  */
- /* .react-datepicker {
+ .react-datepicker {
   font-size: 1em;
 }
 .react-datepicker__header {
@@ -51,23 +51,4 @@ code {
 .react-datepicker__navigation--next {
   border-left-color: #ccc;
   right: 1em;
-} */
-react-datepicker {
-  font-size: 1.3rem !important;
-}
-
-.react-datepicker__current-month {
-  font-size: 1.5rem !important;
-}
-
-.react-datepicker__header {
-  padding-top: 6px !important;
-}
-
-.react-datepicker__navigation {
-  top: 13px !important;
-}
-
-.react-datepicker__day-name, .react-datepicker__day {
-  margin: 0.5rem !important;
 }
